updates css file

--- a/Practice/user form/style.css
+++ b/Practice/user form/style.css
@@ -14,7 +14,7 @@ body{
     background-size: 200px, 100% 500px;
     box-shadow: 0px 3px 3px 3px gray;
 }
-h1{
+.box h1{
     position: relative;
     top:-24px;
     font-family: Arial, Helvetica, sans-serif;
@@ -26,15 +26,15 @@ h1{
     border-radius: 8px 8px 0px 0px;
     box-shadow: 0px 2px 3px gray;
 }
-p{
+.box p{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.3em;
     margin-left: 70px;
 }
-strong{
+.box strong{
     margin-right: 15px;
 }
-span{
+.box span{
     text-decoration: underline;
     font-family: Courier New, Courier, monospace;
 }
