--- a/Practice/Calculater/style.css
+++ b/Practice/Calculater/style.css
@@ -12,18 +12,7 @@ body{
     margin-top: 30px;
     box-shadow: 0px 2px 2px 1px gray;
 }
-span{
-    width:40%;
-    background: white;
-    padding-left: 6px;
-    padding-top: 6px;
-    padding-bottom: 6px;
-    padding-right: 6px;
-    border-radius: 5px;
-    margin-left: 50px;
-    font-weight: bold;
-    display:inline-block;
-}
+
 .mini-container{
     width:100%;
     height: auto;
@@ -41,37 +30,108 @@ span{
 }
 .big-container{
     width: 99%;
-    height: 350px;
+    height: 340px;
     /*border:2px solid gray;*/
-    padding-top: 10px;
+}
+.table1{
+    /*border: 2px solid black;*/
+    width: 90%;
+    empty-cells: show;
+    margin: 20px auto 0px auto;
+    border-collapse: separate;
+    border-spacing: 0px 20px;
+}
+.option{
+    /*border: 2px solid black;*/
+    width: 35%;
+    text-align: center;
 }
 .add{
     padding: 5px 15px 5px 15px;
-    margin-top: 15px;
-    margin-left: 40px;
     font-weight: bold;
+    outline: 0px;
+    border: 0px;
+    border: 2px solid darkorange;
+    background-color: #FFB459;
+    border-radius: 4px;
+}
+.add:hover{
+    border: 2px solid darkgoldenrod;
+    background-color: #FF9819;
+    box-shadow: 0px 1px 2px gray;
+    cursor: pointer;
+    transition: 0.2s;
 }
 .sub{
     padding: 5px 18px 5px 17px;
-    margin-top: 15px;
-    margin-left: 40px;
     font-weight: bold;
+    outline: 0px;
+    border: 0px;
+    border: 2px solid darkorange;
+    background-color: #FFB459;
+    border-radius: 4px;
+}
+.sub:hover{
+    border: 2px solid darkgoldenrod;
+    background-color: #FF9819;
+    box-shadow: 0px 1px 2px gray;
+    cursor: pointer;
+    transition: 0.2s;
 }
 .mul{
     padding: 5px 17px 5px 17px;
-    margin-top: 15px;
-    margin-left: 40px;
     font-weight: bold;
+    outline: 0px;
+    border: 0px;
+    border: 2px solid darkorange;
+    background-color: #FFB459;
+    border-radius: 4px;
+}
+.mul:hover{
+    border: 2px solid darkgoldenrod;
+    background-color: #FF9819;
+    box-shadow: 0px 1px 2px gray;
+    cursor: pointer;
+    transition: 0.2s;
 }
 .div{
     padding: 5px 18px 5px 18px;
-    margin-top: 15px;
-    margin-left: 40px;
     font-weight: bold;
+    outline: 0px;
+    border: 0px;
+    border: 2px solid darkorange;
+    background-color: #FFB459;
+    border-radius: 4px;
+}
+.div:hover{
+    border: 2px solid darkgoldenrod;
+    background-color: #FF9819;
+    box-shadow: 0px 1px 2px gray;
+    cursor: pointer;
+    transition: 0.2s;
 }
 .mod{
     padding: 5px 26px 5px 26px;
-    margin-top: 15px;
-    margin-left: 40px;
     font-weight: bold;
+    outline: 0px;
+    border: 0px;
+    border: 2px solid darkorange;
+    background-color: #FFB459;
+    border-radius: 4px;
+}
+.mod:hover{
+    border: 2px solid darkgoldenrod;
+    background-color: #FF9819;
+    box-shadow: 0px 1px 2px gray;
+    cursor: pointer;
+    transition: 0.2s;
+}
+.result-box{
+    border: 1px solid gray;
+    width: 50%;
+    height: auto;
+    background-color: white;
+    border-radius: 4px;
+    padding-left: 4px;
+    box-shadow: 0px 1px 1px 1px lightskyblue; 
 }
