--- a/Practice/TodoList/style.css
+++ b/Practice/TodoList/style.css
@@ -9,3 +9,8 @@ h1{
     color: white;
     font-weight: bold;
 }
+span{
+    color: darkcyan;
+    font-size: 0.5em;
+    font-family: Cambria, Cochin, Georgia, Times, Times New Roman, serif;
+}
