--- a/Practice/My header/style1.css
+++ b/Practice/My header/style1.css
@@ -1,3 +1,13 @@
+/*.backgroud{
+    position: fixed;
+    top: 80px;
+    width: 100%;
+    height: auto;
+    background-image: url(images/index.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 400px;
+    z-index: -1;
+}*/
 .header{
     /*border: 2px solid red;*/
     background:#008080;
@@ -30,6 +40,7 @@
 }
 #link:hover{
     color: darkcyan;
+    transition: 0.6s;
 }
 .icon-color{
     border: 2px solid black;
@@ -56,7 +67,7 @@
     height: auto;
 }
 .box3{
-    border: 1px solid blue;
+    /*border: 1px solid blue;*/
     position: relative;
     top: -30px;
 }
@@ -69,9 +80,15 @@
     width: 100%;
     height: 450px;
 }
-
+.subs-box{
+    /*border: 2px solid gold;*/
+    margin-top: 20px;
+}
+.subs-box p{
+    font-size: 1.1em;
+}
 .box4{
-    border: 1px solid blue;
+    /*border: 1px solid blue;*/
     position: relative;
-    top: -30px;
+    top: -60px;
 }
