--- a/Practice/My header/style1.css
+++ b/Practice/My header/style1.css
@@ -89,6 +89,189 @@
 }
 .box4{
     /*border: 1px solid blue;*/
-    position: relative;
-    top: -60px;
+}
+.box5{
+    /*border: 1px solid blue;*/
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*-------------------Projects.html-------------------*/
+.box{
+    /*border:2px solid red;*/
+    height: auto;
+    text-align: center;
+}
+.heading{
+    /*border: 2px solid red;*/
+    margin-top: 110px;
+    margin-bottom: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2.8em;
+    color: blue;
+    text-shadow: 2px 3px 4px gray;
+    /*padding: 10px 0px 10px 0px;*/
+}
+.link-box1{
+    width: 350px;
+    height: 160px;
+    /*border: 1px solid blue;*/
+    display: inline-block;
+    margin-right: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.link-box1 a img{
+    width: 100%;
+    height: 160px;
+    border-radius: 8px;
+    transition: 1s;
+}
+.link-box1 a img:hover{
+    box-shadow: 0px -1px 2px 4px lightskyblue, 0px 2px 2px 4px lime;
+    transition: 0.8s;
+    transform: rotate(2deg);
+}
+.link-box2{
+    width: 350px;
+    height: 160px;
+    /*border: 1px solid blue;*/
+    display: inline-block;
+    margin-right: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.link-box2 a img{
+    width: 100%;
+    height: 160px;
+    border-radius: 8px;
+    transition: 1s;
+}
+.link-box2 a img:hover{
+    box-shadow: 0px -1px 2px 4px lightskyblue, 0px 2px 2px 4px lime;
+    transition: 0.8s;
+    transform: rotate(2deg);
+}
+.link-box3{
+     width: 350px;
+    height: 160px;
+    /*border: 1px solid blue;*/
+    display: inline-block;
+    margin-right: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.link-box3 a img{
+    width: 100%;
+    height: 160px;
+    border-radius: 8px;
+    transition: 1s;
+}
+.link-box3 a img:hover{
+    box-shadow: 0px -1px 2px 4px lightskyblue, 0px 2px 2px 4px lime;
+    transition: 0.8s;
+    transform: rotate(2deg);
+}
+.link-box4{
+     width: 350px;
+    height: 160px;
+    /*border: 1px solid blue;*/
+    display: inline-block;
+    margin-right: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.link-box4 a img{
+    width: 100%;
+    height: 160px;
+    border-radius: 8px;
+    transition: 1s;
+}
+.link-box4 a img:hover{
+    box-shadow: 0px -1px 2px 4px lightskyblue, 0px 2px 2px 4px lime;
+    transition: 0.8s;
+    transform: rotate(2deg);
+}
+.link-box5{
+     width: 350px;
+    height: 160px;
+    /*border: 1px solid blue;*/
+    display: inline-block;
+    margin-right: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.link-box5 a img{
+    width: 100%;
+    height: 160px;
+    border-radius: 8px;
+    transition: 1s;
+}
+.link-box5 a img:hover{
+    box-shadow: 0px -1px 2px 4px lightskyblue, 0px 2px 2px 4px lime;
+    transition: 0.8s;
+    transform: rotate(2deg);
+}
+.link-box6{
+     width: 350px;
+    height: 160px;
+    /*border: 1px solid blue;*/
+    display: inline-block;
+    margin-right: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.link-box6 a img{
+    width: 100%;
+    height: 160px;
+    border-radius: 8px;
+    transition: 1s;
+}
+.link-box6 a img:hover{
+    box-shadow: 0px -1px 2px 4px lightskyblue, 0px 2px 2px 4px lime;
+    transition: 0.8s;
+    transform: rotate(2deg);
+}
+.link-box7{
+     width: 350px;
+    height: 160px;
+    /*border: 1px solid blue;*/
+    display: inline-block;
+    margin-right: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.link-box7 a img{
+    width: 100%;
+    height: 160px;
+    border-radius: 8px;
+    transition: 1s;
+}
+.link-box7 a img:hover{
+    box-shadow: 0px -1px 2px 4px lightskyblue, 0px 2px 2px 4px lime;
+    transition: 0.8s;
+    transform: rotate(2deg);
 }
