--- a/Practice/My header/style1.css
+++ b/Practice/My header/style1.css
@@ -107,16 +107,22 @@
     margin-left: 8%;
 }
 .box7{
-    border: 1px solid blue;
+    /*border: 1px solid blue;*/
 }
 .box7-form{
-    border: 1px solid blue;
+    /*border: 1px solid blue;*/
+}
+.box7-form label{
+    margin-left: 19px;
 }
 .contact{
     margin-bottom: 10px;
+    margin-left: 18px;
+    margin-right: 18px;
 }
-.button{
-    border: 2px solid red;
+.btn-1{
+    /*border: 2px solid red;*/
+    margin-left: 20%;
 }
 
 
