--- a/Practice/My header/style1.css
+++ b/Practice/My header/style1.css
@@ -170,8 +170,22 @@
     border-radius: 10px;
     transition: 0.5s;
 }
-
-
+.wrong{
+    color: red;
+    text-shadow: 0px 1px 1px gray;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.1em;
+    transition:0.3s;
+}
+#nameCheck{
+    margin: 5px;
+}
+#nameEmail{
+    margin: 5px;
+}
+#namePassword{
+    margin: 5px;
+}
 
 
 
