--- a/Practice/My header/style1.css
+++ b/Practice/My header/style1.css
@@ -170,20 +170,20 @@
     border-radius: 10px;
     transition: 0.5s;
 }
-.wrong{
+.render{
     color: red;
     text-shadow: 0px 1px 1px gray;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.1em;
     transition:0.3s;
 }
-#nameCheck{
+#checkName{
     margin: 5px;
 }
-#nameEmail{
+#checkEmail{
     margin: 5px;
 }
-#namePassword{
+#checkPassword{
     margin: 5px;
 }
 
